avoid nullException when no frenquency list

--- a/src/back.html
+++ b/src/back.html
@@ -443,6 +443,7 @@
   function frequencyHover() {
       const hoverTrigger = document.querySelector('.freq-dropdown');
       const frequencyElement = document.querySelector('.freq-list-container');
+      if (hoverTrigger === null) return;
 
       hoverTrigger.addEventListener('mouseenter', function() {
           frequencyElement.innerHTML = `
