specify japanese language in back side of card

--- a/src/back.html
+++ b/src/back.html
@@ -20,7 +20,7 @@
 </header>
 
 <main>
-  <div class="template">
+  <div class="template" lang="ja">
 
     <!-- The first row (vocab box+picture) -->
     <div class="def-header">
