"let's not deal with conflicts"
This reverts commit 6c603947f2c812fe3cd8d371e847bd9edd986ea6.

--- a/src/back.html
+++ b/src/back.html
@@ -20,7 +20,7 @@
 </header>
 
 <main>
-  <div class="template" lang="ja">
+  <div class="template">
 
     <!-- The first row (vocab box+picture) -->
     <div class="def-header">
