Add language property to back of the card

--- a/src/back.html
+++ b/src/back.html
@@ -19,7 +19,7 @@
   </div>
 </header>
 
-<main>
+<main lang="ja">
   <div class="template">
 
     <!-- The first row (vocab box+picture) -->
@@ -97,7 +97,7 @@
 </main>
 
 <!----------- Footer ------------->
-<footer>
+<footer lang="ja">
   <br>
   <div class="bot-container">
     {{#Tags}}
