--- a/src/back.html
+++ b/src/back.html
@@ -386,10 +386,11 @@
     });
 
     document.addEventListener("keydown", (e) => {
+      const index_old = index;
       if (e.key === "ArrowLeft") index -= 1;
       else if (e.key === "ArrowRight") index += 1;
 
-      toggleDef(index);
+      if (index != index_old) toggleDef(index);
     });
   }
 
