--- a/src/back.html
+++ b/src/back.html
@@ -390,7 +390,7 @@
       if (e.key === "ArrowLeft") index -= 1;
       else if (e.key === "ArrowRight") index += 1;
 
-      if (index != index_old) toggleDef(index);
+      if (index !== index_old) toggleDef(index);
     });
   }
 
