--- a/src/back.html
+++ b/src/back.html
@@ -480,8 +480,7 @@
 
     let primaryDicts = document.querySelectorAll("#primary li[data-dictionary]");
     console.log(primaryDicts);
-
-    if (!primaryDicts) return;
+    if (primaryDicts.length === 0) return;
     
     let style = document.createElement('style');
     style.type = 'text/css';
