--- a/src/back.html
+++ b/src/back.html
@@ -355,6 +355,7 @@
     }
     else if (dictNames[currentIndex].toLowerCase().includes("primary definition")) {
       definitionContainer.innerHTML = `<div id="primary">{{MainDefinition}}</div>`;
+      reindexPrimaryDicts();
       hideCorrectDefinition();
     }
     else if (dictNames[currentIndex].toLowerCase().includes("glossar"))
@@ -495,6 +496,15 @@
     defContainer.appendChild(style);
   }
 
+  function reindexPrimaryDicts() {
+      //fix indexes in primary
+      let dictLists = document.querySelectorAll("#primary .yomitan-glossary > ol");
+      dictLists = Array.from(dictLists).filter(ol => ol.getElementsByTagName("li").length > 0);
+      for (let idx = 1; idx < dictLists.length; idx++) {
+          dictLists[idx].start = idx + 1;
+      }
+  }
+
   // Initialize all functions!!!
   function initialize() {
     tweakHTML();
@@ -506,6 +516,7 @@
     frequencyHover();
     setDHHeight();
     hideCorrectDefinition();
+    reindexPrimaryDicts();
   }
 
   initialize();
