--- a/src/back.html
+++ b/src/back.html
@@ -69,7 +69,9 @@
         </div>
         <blockquote class="main-def def-blockquote">
             <div class="definition">
-                {{#SelectionText}}{{SelectionText}}{{/SelectionText}}
+                {{#SelectionText}}<div id="selection" class="hidden" data-display-name="Text Selection">{{SelectionText}}</div>{{/SelectionText}}
+                <div id="primary" class="hidden" data-display-name="Primary Definition">{{MainDefinition}}</div>
+                <div id="glossaries" class="hidden" data-display-name="Glossaries">{{Glossary}}</div>
             </div>
         </blockquote>
 
@@ -332,116 +334,114 @@
         return strippedContent === "" && content.match(/<\/?[^>]+(>|$)/g) !== null;
     }
 
-    // This function handles toggling definitions with click/key
-    function toggleDef(index) {
-        let dictNames = [];
-        if (`{{SelectionText}}`) dictNames.push("Text Selection");
-        if (`{{MainDefinition}}` && isAllHtml(`{{MainDefinition}}`) == false) dictNames.push("Primary Definition");
-        if (`{{Glossary}}`) dictNames.push("Glossaries");
+    function updateDefDisplay() {
+      console.log("hellooo");
+      const definitionContainer = document.querySelector(
+         ".main-def > .definition",
+      );
+      let n_children = definitionContainer.children.length;
+      if (n_children <= 1) return;
 
-        const definitionContainer = document.querySelector(
-            ".main-def > .definition",
-        );
+      const mainDefContainer = document.querySelector(".main-def");
+      let currentIndex = document.head.getAttribute("data-def-index");
 
-        const indexDisplay = document.querySelector(".def-info");
-        indexDisplay.style.opacity = 1;
+      currentIndex = currentIndex % n_children;
+      while (currentIndex < 0) currentIndex += n_children;
 
-        currentIndex = index % dictNames.length;
-        while (currentIndex < 0) currentIndex += dictNames.length;
+      console.log(currentIndex)
+      let defToDisplay = definitionContainer.children[currentIndex]
 
-        indexDisplay.innerText = `${dictNames[currentIndex]} ${currentIndex + 1}/${dictNames.length
-            }`;
 
-        if (dictNames[currentIndex].toLowerCase().includes("text selection")) {
-            definitionContainer.innerHTML = `{{SelectionText}}`;
+      for (let idx = 0; idx < n_children; idx++) {
+          definitionContainer.children[idx].classList.add("hidden");
+      }
+      defToDisplay.classList.remove("hidden");
+
+      const indexDisplay = document.querySelector(".def-info");
+      indexDisplay.style.opacity = 1;
+      indexDisplay.innerText = `${defToDisplay.getAttribute("data-display-name")} ${currentIndex + 1}/${n_children}`;
+  }
+
+  function setUpDefToggle() {
+    let mainDefContainer = document.querySelector(".main-def");
+
+    const leftEdge = document.createElement("div");
+    const rightEdge = document.createElement("div");
+    leftEdge.classList.add("left-edge");
+    leftEdge.classList.add("tappable");
+    rightEdge.classList.add("right-edge");
+    rightEdge.classList.add("tappable");
+    mainDefContainer.appendChild(leftEdge);
+    mainDefContainer.appendChild(rightEdge);
+
+    document.head.setAttribute("data-def-index", 0);
+
+    const changeIndex = (value) => {
+      // sync index
+      index = Number(document.head.getAttribute("data-def-index"));
+      index += value;
+      document.head.setAttribute("data-def-index", index);
+      updateDefDisplay();
+    };
+
+    leftEdge.addEventListener("click", (e) => changeIndex(-1));
+    rightEdge.addEventListener("click", (e) => changeIndex(1));
+
+    // Add listener only once at session start
+    if (document.head.classList.contains("has-listener") ) { return; }
+    document.addEventListener("keydown", (e) => {
+      if (e.key === "ArrowLeft") changeIndex(-1);
+      else if (e.key === "ArrowRight") changeIndex(1);
+    });
+
+    document.head.classList.add("has-listener");
+  }
+
+  // By default, it's going to be SelectionText in that field, but what if it is empty i.e user has not selected any text?
+  function showCorrectDef() {
+    const selectionText = document.querySelector(".main-def > .definition");
+    if ((selectionText.innerHTML.trim() == "" && `{{MainDefinition}}`) && isAllHtml(`{{MainDefinition}}`) == false) {
+      selectionText.innerHTML = `<div id="primary">{{MainDefinition}}</div>`;
+    }
+    else if (selectionText.innerHTML.trim() == "" && (`{{MainDefinition}}` == "" || isAllHtml(`{{MainDefinition}}`) == true))
+      selectionText.innerHTML = `<div id="glossaries">{{Glossary}}</div>`;
+  }
+
+  // This just handles clicking and showing images
+  function clickImage() {
+    const modalBg = document.querySelector(".modal-bg");
+    const imgPopup = document.querySelector(".img-popup");
+    const image = document.querySelector(".image img");
+
+    if (!image) return;
+
+    image.addEventListener("click", () => {
+        const imgPopupContainer = document.createElement("div");
+        const imgPopupImg = document.createElement("img");
+
+        imgPopupContainer.classList.add("img-popup-container");
+        imgPopupImg.src = image.src;
+        imgPopupImg.classList.add("img-popup-img");
+
+        if (image.height > image.width) {
+            imgPopupContainer.style.height = "calc(100% - 20px)";
+            imgPopupContainer.style.width = "max-content";
         }
-        else if (dictNames[currentIndex].toLowerCase().includes("primary definition")) {
-            definitionContainer.innerHTML = `<div id="primary">{{MainDefinition}}</div>`;
-            movePrimaryDicts();
-            hideCorrectDefinition();
-        }
-        else if (dictNames[currentIndex].toLowerCase().includes("glossar"))
-            definitionContainer.innerHTML = `<div id="glossaries">{{Glossary}}</div>`;
-    }
+        imgPopup.innerHTML = "";
+        imgPopup.appendChild(imgPopupContainer);
+        imgPopupContainer.appendChild(imgPopupImg);
 
-    function setUpDefToggle() {
-        const mainDefContainer = document.querySelector(".main-def");
+        document.body.classList.add("img-popup");
+        modalBg.style.display = "block";
+        imgPopupContainer.style.display = "flex";
+    });
 
-        const leftEdge = document.createElement("div");
-        const rightEdge = document.createElement("div");
-        leftEdge.classList.add("left-edge");
-        leftEdge.classList.add("tappable");
-        rightEdge.classList.add("right-edge");
-        rightEdge.classList.add("tappable");
-        mainDefContainer.appendChild(leftEdge);
-        mainDefContainer.appendChild(rightEdge);
-
-        let index = 0;
-
-        leftEdge.addEventListener("click", (e) => {
-            index -= 1;
-            toggleDef(index);
-        });
-
-        rightEdge.addEventListener("click", (e) => {
-            index += 1;
-            toggleDef(index);
-        });
-
-        document.addEventListener("keydown", (e) => {
-            const index_old = index;
-            if (e.key === "ArrowLeft") index -= 1;
-            else if (e.key === "ArrowRight") index += 1;
-
-            if (index !== index_old) toggleDef(index);
-        });
-    }
-
-    // By default, it's going to be SelectionText in that field, but what if it is empty i.e user has not selected any text?
-    function showCorrectDef() {
-        const selectionText = document.querySelector(".main-def > .definition");
-        if ((selectionText.innerHTML.trim() == "" && `{{MainDefinition}}`) && isAllHtml(`{{MainDefinition}}`) == false) {
-            selectionText.innerHTML = `<div id="primary">{{MainDefinition}}</div>`;
-        }
-        else if (selectionText.innerHTML.trim() == "" && (`{{MainDefinition}}` == "" || isAllHtml(`{{MainDefinition}}`) == true))
-            selectionText.innerHTML = `<div id="glossaries">{{Glossary}}</div>`;
-    }
-
-    // This just handles clicking and showing images
-    function clickImage() {
-        const modalBg = document.querySelector(".modal-bg");
-        const imgPopup = document.querySelector(".img-popup");
-        const image = document.querySelector(".image img");
-
-        if (!image) return;
-
-        image.addEventListener("click", () => {
-            const imgPopupContainer = document.createElement("div");
-            const imgPopupImg = document.createElement("img");
-
-            imgPopupContainer.classList.add("img-popup-container");
-            imgPopupImg.src = image.src;
-            imgPopupImg.classList.add("img-popup-img");
-
-            if (image.height > image.width) {
-                imgPopupContainer.style.height = "calc(100% - 20px)";
-                imgPopupContainer.style.width = "max-content";
-            }
-            imgPopup.innerHTML = "";
-            imgPopup.appendChild(imgPopupContainer);
-            imgPopupContainer.appendChild(imgPopupImg);
-
-            document.body.classList.add("img-popup");
-            modalBg.style.display = "block";
-            imgPopupContainer.style.display = "flex";
-        });
-
-        modalBg.addEventListener("click", () => {
-            document.body.classList.remove("img-popup");
-            modalBg.style.display = "none";
-            imgPopup.innerHTML = "";
-        });
-    }
+    modalBg.addEventListener("click", () => {
+        document.body.classList.remove("img-popup");
+        modalBg.style.display = "none";
+        imgPopup.innerHTML = "";
+    });
+  }
 
     // Handles what you see when you hover over frequency dropdown icon
     function frequencyHover() {
@@ -511,13 +511,14 @@
         tweakHTML();
         paintTargetWord();
         constructPitch();
-        showCorrectDef();
         setUpDefToggle();
+        //showCorrectDef();
         clickImage();
         frequencyHover();
         setDHHeight();
         hideCorrectDefinition();
         movePrimaryDicts();
+        updateDefDisplay(); 
     }
 
     initialize();
