Update front.html to make it compatible with the French language

--- a/src/front.html
+++ b/src/front.html
@@ -4,30 +4,28 @@
 <main>
     <!--------- front-vocab card ---------->
     {{^IsSentenceCard}} {{^IsHintCard}} {{^IsClickCard}}
-    <div lang="ja" class="front-vocab">{{Expression}}</div>
+    <div lang="fr" class="front-vocab">{{Expression}}</div>
     {{/IsClickCard}} {{/IsHintCard}} {{/IsSentenceCard}}
 
     <!------- Sentence card --------->
     {{#IsSentenceCard}}
-    <div lang="ja" class="front-sentence">
-        {{#SentenceFurigana}} {{kanji:SentenceFurigana}} {{/SentenceFurigana}}
-        {{^SentenceFurigana}} {{kanji:Sentence}} {{/SentenceFurigana}}
+    <div lang="fr" class="front-sentence">
+        {{Sentence}}
     </div>
     {{/IsSentenceCard}}
 
     <!--------- Hint card ----------->
     {{#IsHintCard}}
-    <div lang="ja" class="front-vocab">{{Expression}}</div>
+    <div lang="fr" class="front-vocab">{{Expression}}</div>
     <div id="hint">
-        {{#SentenceFurigana}} {{kanji:SentenceFurigana}} {{/SentenceFurigana}}
-        {{^SentenceFurigana}} {{kanji:Sentence}} {{/SentenceFurigana}}
+        {{Sentence}}
     </div>
     {{/IsHintCard}}
 
     <!-------- Click card ----------->
     {{#IsClickCard}}
     <div id="click">
-        <div lang="ja" class="front-vocab">{{Expression}}</div>
+        <div lang="fr" class="front-vocab">{{Expression}}</div>
     </div>
     {{/IsClickCard}}
 
@@ -46,9 +44,8 @@
 
         // This is what it is going to click to
         const clickedContent = `
-      <div lang="ja" class="front-sentence">
-        {{#SentenceFurigana}} {{kanji:SentenceFurigana}} {{/SentenceFurigana}}
-        {{^SentenceFurigana}} {{kanji:Sentence}} {{/SentenceFurigana}}
+      <div lang="fr" class="front-sentence">
+        {{Sentence}}
       </div>
     `;
 
