--- a/src/back.html
+++ b/src/back.html
@@ -20,30 +20,24 @@
     </div>
 </header>
 
-<main lang="ja">
+<main lang="fr">
     <div class="template">
 
         <!-- The first row (vocab box+picture) -->
         <div class="def-header">
             <div class="dh-left">
-                <div class="show-furigana vocab">
-                    {{#ExpressionFurigana}}{{furigana:ExpressionFurigana}}{{/ExpressionFurigana}}
-                    {{^ExpressionFurigana}}{{Expression}}{{/ExpressionFurigana}}
+                <div class="vocab">
+                    {{Expression}}
                 </div>
 
                 <!-- Reading + Pitch Accent -->
                 <div class="info">
                     <div class="pitch">
                         <div style="margin-right: -15px; display: inline">
-                            {{#ExpressionFurigana}}{{kana:ExpressionFurigana}}{{/ExpressionFurigana}}
-                            {{^ExpressionFurigana}}{{ExpressionReading}}{{/ExpressionFurigana}}
+                            {{ExpressionReading}}
                         </div>
                     </div>
 
-                    <!-- Pitch Accent -->
-                    {{#PitchPosition}}
-                    <span id="pitch-tags" class="tags"> {{PitchPosition}} </span>
-                    {{/PitchPosition}}
                     <br />
                     <div class="audio-buttons">{{ExpressionAudio}} {{SentenceAudio}}</div>
                 </div>
@@ -59,8 +53,7 @@
 
         <br>
         <div class="sentence">
-            {{#SentenceFurigana}} {{furigana:SentenceFurigana}} {{/SentenceFurigana}}
-            {{^SentenceFurigana}} {{furigana:Sentence}} {{/SentenceFurigana}}
+            {{Sentence}}
         </div>
 
         <!-- The entire definition blockquote -->
@@ -79,8 +72,7 @@
 
         <!-- This is for the sentence that you see on mobile (positioned under definition), on Desktop, the sentence goes above the definition box, and this is hidden -->
         <div class="sentence-mobile">
-            {{#SentenceFurigana}} {{furigana:SentenceFurigana}} {{/SentenceFurigana}}
-            {{^SentenceFurigana}} {{furigana:Sentence}} {{/SentenceFurigana}}
+            {{Sentence}}
         </div>
 
         <!------- Image modal --------->
@@ -104,7 +96,7 @@
 </main>
 
 <!----------- Footer ------------->
-<footer lang="ja">
+<footer lang="fr">
     <br>
     <div class="bot-container">
         {{#Tags}}
@@ -117,66 +109,6 @@
 
 <!----------- Scripts ------------>
 <script>
-    // This code is concerned with calculating the Pitch Accent and constructing the pitch accent graphs
-    function isOdaka(pitchNumber) {
-        const kana = `{{kana:ExpressionFurigana}}` || `{{ExpressionReading}}`;
-        return (
-            kana !== null &&
-            kana.replace(/[ァゥェォャュョィヮぁぅぇぉゃゅょぃゎ]/g, "").length === pitchNumber
-        );
-    }
-
-    function endsWithAny(suffixes, string) {
-        for (let suffix of suffixes) {
-            if (string.endsWith(suffix)) return true;
-        }
-        return false;
-    }
-
-    function getPitchType(pitchPosition) {
-        if (
-            endsWithAny(
-                ["い", "う", "く", "す", "つ", "ぶ", "む", "る"],
-                "{{Expression}}".replace("</div>", ""),
-            )
-        ) {
-            if (pitchPosition === 0) {
-                return "heiban";
-            } else {
-                return "kifuku";
-            }
-        } else {
-            if (pitchPosition === 0) {
-                return "heiban";
-            } else if (pitchPosition === 1) {
-                return "atamadaka";
-            } else if (pitchPosition > 1) {
-                return isOdaka(pitchPosition) ? "odaka" : "nakadaka";
-            }
-        }
-    }
-
-    // Show the color
-    function paintTargetWord() {
-        const pitchPositions = `{{PitchPosition}}`.match(/^\d+|\d+\b|\d+(?=\w)/g);
-        if (pitchPositions === null) return;
-
-        const pitchPosition = Number(pitchPositions[0]);
-        const sentences = Array.from(
-            document.querySelectorAll(".sentence, .definition, .sentence-mobile"),
-        );
-        for (const sentence of sentences) {
-            for (const targetWord of sentence.getElementsByTagName("b")) {
-                targetWord.classList.add(getPitchType(pitchPosition));
-            }
-        }
-
-        const vocabElement = document.querySelector(".vocab");
-        if (vocabElement !== null) {
-            vocabElement.classList.add(getPitchType(pitchPosition));
-        }
-    }
-
     // Seperate Tags by space, and show them in their own boxes
     function tweakHTML() {
         // Split tags
@@ -192,144 +124,6 @@
             }
         }
     }
-
-    function groupMoras(kana) {
-        let currentChar = "";
-        let nextChar = "";
-        const groupedMoras = [];
-        const check = ["ァ", "ゥ", "ェ", "ォ", "ャ", "ュ", "ョ", "ィ", "ヮ", "ぁ", "ぅ", "ぇ", "ぉ", "ゃ", "ゅ", "ょ", "ぃ", "ゎ"];
-
-        for (let i = 0; i < kana.length; i++) {
-            currentChar = kana[i];
-            nextChar = i < kana.length - 1 && kana[i + 1];
-            if (check.includes(nextChar)) {
-                groupedMoras.push(currentChar + nextChar);
-                i += 1;
-            } else {
-                groupedMoras.push(currentChar);
-            }
-        }
-        return groupedMoras;
-    }
-
-    function getPitchPattern(pitchPosition) {
-        // 0 = low
-        // 1 = high
-        // 2 = high to low
-
-        const kana = `{{kana:ExpressionFurigana}}` || `{{ExpressionReading}}`;
-        const moras = groupMoras(kana);
-        let pattern = [];
-
-        if (pitchPosition === 0) {
-            // 平板
-            pattern = [
-                ...Array(moras[0].length).fill("0"),
-                ...Array(kana.length - moras[0].length).fill("1"),
-            ];
-        } else if (pitchPosition === 1) {
-            // 頭高
-            pattern = [
-                ...(moras[0].length === 2 ? ["1", "2"] : ["2"]),
-                ...Array(kana.length - moras[0].length).fill("0"),
-            ];
-        } else if (pitchPosition > 1) {
-            if (isOdaka(pitchPosition)) {
-                // 尾高
-                pattern = [
-                    ...Array(moras[0].length).fill("0"),
-                    ...Array(kana.length - moras[0].length - 1).fill("1"),
-                    "2",
-                ];
-            } else {
-                // 中高
-                let afterDrop = false;
-                for (let i = 0; i < moras.length; i++) {
-                    if (i === 0) {
-                        pattern = Array(moras[0].length).fill("0");
-                    } else if (i + 1 === pitchPosition) {
-                        pattern =
-                            moras[i].length === 2
-                                ? [...pattern, "1", "2"]
-                                : [...pattern, "2"];
-                        afterDrop = true;
-                    } else if (afterDrop) {
-                        pattern = [...pattern, ...Array(moras[i].length).fill("0")];
-                    } else {
-                        pattern = [...pattern, ...Array(moras[i].length).fill("1")];
-                    }
-                }
-            }
-        }
-        return pattern;
-    }
-
-    function constructPitch() {
-        const kana = `{{kana:ExpressionFurigana}}` || `{{ExpressionReading}}`;
-        const pitch = document.querySelector(".pitch");
-        const pitchTags = document.querySelector("#pitch-tags");
-        const pitchPositions = `{{PitchPosition}}`.match(/^\d+|\d+\b|\d+(?=\w)/g);
-
-        if (!pitchPositions) {
-            pitch.innerHTML = `<div style="margin-right: -15px; display: inline;">${kana}</div>`;
-            return;
-        }
-
-        const createPitchSpan = (pitchClass, pitchChar) => {
-            const pitchSpan = document.createElement("span");
-            const charSpan = document.createElement("span");
-            const lineSpan = document.createElement("span");
-
-            pitchSpan.classList.add(pitchClass);
-            charSpan.classList.add("pitch-char");
-            charSpan.innerText = pitchChar;
-            lineSpan.classList.add("pitch-line");
-
-            pitchSpan.appendChild(charSpan);
-            pitchSpan.appendChild(lineSpan);
-
-            return pitchSpan;
-        };
-
-        pitch.innerHTML = "";
-        pitchTags.innerHTML = "";
-        pitchTags.style.display = "inline-block";
-        let uniquePitchPositions = [...new Set(pitchPositions)];
-
-        const pitchList = document.createElement("ul");
-        const pitchTagList = document.createElement("ul");
-
-        for (let pitchPosition of uniquePitchPositions) {
-            const pitchTag = document.createElement("li");
-            pitchTag.textContent = pitchPosition;
-
-            const pattern = getPitchPattern(Number(pitchPosition));
-
-            const pitchItem = document.createElement("li");
-            pitchItem.classList.add("pitch-item");
-            pitchItem.classList.add(getPitchType(Number(pitchPosition)));
-
-            for (let i = 0; i < kana.length; i++) {
-                if (pattern[i] === "0")
-                    pitchItem.appendChild(createPitchSpan("pitch-low", kana[i]));
-                else if (pattern[i] === "1")
-                    pitchItem.appendChild(createPitchSpan("pitch-high", kana[i]));
-                else if (pattern[i] === "2")
-                    pitchItem.appendChild(createPitchSpan("pitch-to-drop", kana[i]));
-                else
-                    console.error(
-                        "pattern[i] found undefined value. pattern is",
-                        pattern,
-                    );
-            }
-            pitchTagList.appendChild(pitchTag);
-            pitchList.appendChild(pitchItem);
-        }
-
-        pitch.appendChild(pitchList);
-        pitchTags.appendChild(pitchTagList);
-    }
-
 
     function isPrimaryEqualToGloss() {
         const isJPMNConverted = document.querySelector(".definition li[data-details]");
@@ -535,8 +329,6 @@
     // Initialize all functions!!!
     function initialize() {
         tweakHTML();
-        paintTargetWord();
-        constructPitch();
         setUpDefToggle();
         clickImage();
         frequencyHover();
